<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/string_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/string_sign_out"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sign_in"
        android:orderInCategory="99"
        android:title="@string/string_sign_in"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_filter_by_color"
        android:orderInCategory="101"
        android:title="@string/string_filter_by_color"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort"
        android:orderInCategory="102"
        android:title="@string/string_sort"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="103"
        android:title="@string/string_sync"
        app:showAsAction="never"/>

</menu>